# clicked

./: .env.example  .gitignore  Makefile  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: ai-agent-ci.yml  contracts-ci.yml  frontend-ci.yml
apps/ai_agent/: main.py  pyproject.toml
apps/ai_agent/.github/workflows/: ai_agent.yml
apps/ai_agent/tests/: conftest.py  test_health.py  test_proposals.py  test_search.py  test_transfers.py
apps/backend/: eslint.config.js
apps/backend/docs/: e2ee-onboarding.md
apps/backend/drizzle/: 0004_premium_mattie_franklin.sql  0005_soft_deleted_messages.sql  0008_extend_messages.sql  0008_keen_sway.sql
apps/backend/drizzle/meta/: 0004_snapshot.json  0008_snapshot.json  _journal.json
apps/backend/src/: app.ts  config.ts  index.ts
apps/backend/src/__tests__/: auth.integration.test.ts  config.test.ts  conversations.cache.test.ts  conversations.routes.test.ts  devices.prekeys.test.ts  devices.test.ts  health.test.ts  messages.routes.test.ts  readReceipts.test.ts  setup.ts  stellarListener.test.ts  users.fingerprint.test.ts  users.test.ts  validate.test.ts
apps/backend/src/db/: schema.ts
apps/backend/src/lib/: conversationCache.ts  jwt.ts  messages.ts  redis.ts  socket.ts
apps/backend/src/middleware/: auth.ts  socketAuth.ts  validate.ts
contracts/: .gitignore  Cargo.toml
contracts/contracts/group_treasury/: Cargo.toml
contracts/contracts/proposals/: Cargo.toml
contracts/contracts/token_transfer/: Cargo.toml
contracts/scripts/: deploy_group_treasury.sh  deploy_proposals.sh  deploy_token_transfer.sh
(+36 files in other folders)
